Fix jumpiness of color input when it goes from light color to dark color and border changes; Make select border match color of color input;

--- a/app/view/_shared/root/root.css
+++ b/app/view/_shared/root/root.css
@@ -288,6 +288,9 @@ input[type="range"] {
   border-radius: var(--radius-sm);
 }
 
+select {
+  border-color: var(--color-gray-light);
+}
 select,
 select option {
   accent-color: var(--color-primary); /* this doesn't actually work, but hopefully someday it will */
